--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -7,3 +7,6 @@
 
   gtag('config', 'UA-150962760-1');
 </script>
+
+<link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+<link rel="icon" type="image/png" href="/assets/images/favicon.png">
